--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1{
     margin-top: 30px;
     margin-left: 220px;
     width: 890px;
+    margin-bottom: 50px;
 }
 /* section end */
 .temam{
@@ -88,6 +89,7 @@ h1{
     width: 870px;
     margin: 0px auto;
     display: flex;
+    margin-top: 50px;
     grid-template-columns: repeat(2, 1fr);
 }
 .futures{
@@ -111,14 +113,57 @@ h1{
 }
 .version{
     box-shadow: 3px 3px 3px 3px aliceblue;
-    background-color: ;
     margin-top: 0px;
     padding: 20px;
 }
+.version-content{
+    color: rgba(114, 114, 114, 1);
+}
 
 .futures-images img{
+    margin-left: 70px;
     display: flex;
     width: 100%;
+    height: 100%;
+}
+.info{
+    background-color: #FF900E;
+    color: #ffffff;
+    border: none;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: 25px;
+    margin-top: -200px;
+}
+.btn h1{
+    margin-bottom: 20px;
+    justify-content: center;
 }
 
 /* future section end */
+/* article part start here */
+.fact{
+    margin: 0 auto;
+    width: 887px;
+    margin-top: 100px;
+}
+.fact-card{
+    display: flex;
+    justify-content: space-between;  
+    margin-top: 50px; 
+    margin-left: 20px;
+} 
+.fact-heading{
+    width: 50%;
+}
+.card-icon{
+    border: 1px solid #FF900E;
+    border-radius: 3px;
+    width: 150px;
+    height: 150px;
+    text-align: center;
+}
+.card-icon img{
+    margin-top: 10px;
+}
+/* article part end here */
